# SunnyLand

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: config.json
cmake/: compiler_settings.cmake
src/: main.cpp
src/common/: logger.hpp
src/engine/component/: component.h  sprite_component.cpp  sprite_component.h  transform_component.cpp  transform_component.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  time.cpp  time.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/object/: game_object.cpp  game_object.h
src/engine/render/: camera.cpp  camera.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/utils/: alignment.h  math.hpp
src/game/scene/: game_scene.cpp  game_scene.h
